sfdx-source/force-app/main/default/objects/Rate_Change_Request__c/Rate_Change_Request__c.object-meta.xml
<CustomObject>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Rate Change Request</label>
    <nameField>
        <displayFormat>Change-{0000}</displayFormat>
        <label>Rate Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>