sfdx-source/force-app/main/default/objects/Rate_Change_Request__c/fields/Activation_Initiated_Time__c.field-meta.xml
<CustomField>
    <fullName>Activation_Initiated_Time__c</fullName>
    <description>LEM-15034 This field holds time when Rate change request is activation initiated</description>
    <label>Activation Initiated Time</label>
    <type>DateTime</type>
</CustomField>