sfdx-source/force-app/main/default/objects/Rate_Change_Request__c/fields/Activation_Status__c.field-meta.xml
<CustomField>
    <fullName>Activation_Status__c</fullName>
    <label>Activation Status</label>
    <description>LEM-6471 This field is used to track rate change request status.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready for Activation</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Activation Initiated</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>