sfdx-source/force-app/main/default/objects/Rate_Change_Request__c/fields/Associated_stores_updated__c.field-meta.xml
<CustomField>
    <fullName>Associated_stores_updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associated stores updated?</label>
    <description>LEM-6471 This field is used to track if associated stores are updated.</description>
    <type>Checkbox</type>
</CustomField>