sfdx-source/force-app/main/default/objects/Rate_Change_Request__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Rate Change Requests</relationshipLabel>
    <relationshipName>Contract_Rate_Change_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>