sfdx-source/force-app/main/default/objects/Rate_Change_Request__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>