sfdx-source/force-app/main/default/objects/Rate_Change_Request__c/fields/Order_Products_Updated__c.field-meta.xml
<CustomField>
    <fullName>Order_Products_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Products Updated</label>
    <description>LEM-6471 This field is used to track if associated order products are updated.</description>
    <type>Checkbox</type>
</CustomField>