sfdx-source/force-app/main/default/objects/Rate_Change_Request__c/fields/Ready_For_Activation_Time__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Activation_Time__c</fullName>
    <description>LEM-15034 This field holds start date/time value when Rate Change Request started processing</description>
    <label>Ready For Activation Time</label>
    <type>DateTime</type>
</CustomField>