sfdx-source/force-app/main/default/objects/Rate_Change_Request__c/fields/Request_Cycle_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Cycle_Time__c</fullName>
    <formula>IF( ISPICKVAL(Activation_Status__c, &apos;Activation Initiated&apos;) &amp;&amp; NOT(ISBLANK(Activation_Initiated_Time__c)) &amp;&amp; NOT(ISBLANK(Ready_For_Activation_Time__c)),
(IF (FLOOR((Activation_Initiated_Time__c -  Ready_For_Activation_Time__c)) &gt; 0, TEXT(FLOOR((Activation_Initiated_Time__c - Ready_For_Activation_Time__c)) ) &amp; &quot; Days &quot;, &quot;&quot;) &amp;
IF(FLOOR(MOD((Activation_Initiated_Time__c - Ready_For_Activation_Time__c)* 24, 24 )) &gt; 0, TEXT(FLOOR(MOD((Activation_Initiated_Time__c - Ready_For_Activation_Time__c)* 24, 24 ))) &amp; &quot; Hours &quot;,&quot;&quot;) &amp; 
TEXT(ROUND(MOD((Activation_Initiated_Time__c - Ready_For_Activation_Time__c)* 24 * 60, 60 ), 0)) &amp; &quot; Minutes &quot; &amp; 
TEXT(ROUND(MOD((Activation_Initiated_Time__c - Ready_For_Activation_Time__c)* 24 * 60*60, 60 ), 0)) &amp; &quot; Seconds&quot;)
,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Cycle Time</label>
    <type>Text</type>
</CustomField>