sfdx-source/force-app/main/default/objects/Rate_Change_Request__c/fields/S_O_Support_Request_Link__c.field-meta.xml
<CustomField>
    <fullName>S_O_Support_Request_Link__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-6457-Active Rate Provisioning</description>
    <label>S&amp;O Support Request Link</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>SO_Support_Request</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Rate Change Requests</relationshipLabel>
    <relationshipName>Rate_Change_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>