sfdx-source/force-app/main/default/objects/Rate_Change_Request__c/validationRules/Restrict_Status_based_on_Effective_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Status_based_on_Effective_Date</fullName>
    <active>false</active>
    <description>LEM-6457 Active Rate Provisioning</description>
    <errorConditionFormula>AND (
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
ISPICKVAL(Status__c, &apos;Cancelled&apos;),
Effective_Date__c  &lt;=  Today())</errorConditionFormula>
    <errorMessage>You can only cancel the request if the effective date is in future.</errorMessage>
</ValidationRule>